--- a/chatGPT/src/App/app.css
+++ b/chatGPT/src/App/app.css
@@ -5,6 +5,26 @@
   position: relative;
 }
 
+.bg{
+    height: 100%;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    position: absolute;
+    z-index: -10;
+}
+
+video{
+    /* width: 100%; */
+    height: 100%;
+    opacity: 1;
+    mix-blend-mode:lighten;
+    filter: blur(50px);
+    scale: 2;
+    /* user-select: none; */
+    /* -webkit-user-drag: none; */
+}
+
 .right{
     padding: 1rem;
     width: 100%;
@@ -173,6 +193,7 @@
     /* border-right: var(--border); */
     z-index: 100px;
     transition: 0.3s ease;
+    backdrop-filter: blur(50px);
 }
 
 
@@ -278,6 +299,7 @@
     border: var(--border);
     cursor: pointer;
     border-radius: 10px;
+    margin-top: 1rem;
 }
 
 
