--- a/chatGPT/src/index.css
+++ b/chatGPT/src/index.css
@@ -4,9 +4,9 @@
   --main-background: #cdc1b1;
   --font-color: #ffffff;
 
-  --theme1-background: #7f6a51;
-  --theme1-border: 1px solid #614f41;
-  --theme1-main-background: #cdc1b1;
+  --theme1-background: #ffffff3e;
+  --theme1-border: 1px solid #ffffff7b;
+  --theme1-main-background: #ffffff;
   --theme1-font-color: #ffffff;
 
   --theme2-background: #ffaed1;
@@ -47,4 +47,18 @@
 
 body {
   background-color: var(--main-background);
+}
+
+::-webkit-scrollbar{
+  width: 10px;
+  padding: 3px;
+}
+
+::-webkit-scrollbar-track{
+  background-color: #ffffff56;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: #ffffff;
+  border-radius: 50px;
 }
