--- a/chatGPT/src/App/app.css
+++ b/chatGPT/src/App/app.css
@@ -1,40 +1,44 @@
-
 .container {
   height: 100vh;
   display: flex;
   position: relative;
 }
 
-.bg{
-    height: 100%;
-    width: 100%;
-    position: relative;
-    overflow: hidden;
-    position: absolute;
-    z-index: -10;
+.bg {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  position: absolute;
+  z-index: -10;
 }
 
-video{
-    /* width: 100%; */
-    height: 100%;
-    opacity: 1;
-    mix-blend-mode:lighten;
-    filter: blur(50px);
-    scale: 2;
-    /* user-select: none; */
-    /* -webkit-user-drag: none; */
+video {
+  /* width: 100%; */
+  height: 100%;
+  opacity: 1;
+  mix-blend-mode: lighten;
+  filter: blur(50px);
+  scale: 2;
+  /* user-select: none; */
+  /* -webkit-user-drag: none; */
 }
 
-.right{
-    padding: 1rem;
-    width: 100%;
+.right {
+  padding: 1rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  max-width: 735px;
 }
 
-.msgArea{
-    overflow-y: scroll;
+.msgArea {
+  overflow-y: scroll;
 }
 
-.msgArea ,.inputbox {
+.msgArea,
+.inputbox {
   /* background-color: var(--background); */
   padding: 1rem;
   border-radius: 10px;
@@ -54,7 +58,8 @@ video{
   position: relative;
 }
 
-.fa-arrow-up ,.fa-arrow-down {
+.fa-arrow-up,
+.fa-arrow-down {
   position: absolute;
   right: 0%;
   bottom: 0%;
@@ -63,254 +68,350 @@ video{
     0px 0px 6px #fff, 0px 0px 7px #fff;
 }
 
-.msgArea{
-    height: 78vh;
+.msgArea {
+  height: 78vh;
 }
 
-.msg-field{
-    display: flex;
-    gap: 1rem;
+.msg-field {
+  display: flex;
+  gap: 1rem;
 }
 
-.msg-field p{
-    margin-bottom: 1rem;
-    /* color: var(--font-color); */
+.msg-field p {
+  margin-bottom: 1rem;
+  /* color: var(--font-color); */
 }
 
-.inputbox{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 1rem;
-    height: 60px;
-    gap: 1rem;
+.inputbox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1rem;
+  height: 60px;
+  gap: 1rem;
 }
 
-.inputbox input{
-    background-color: transparent;
-    border: none;
-    outline: none;
-    font-size: 16px;
-    /* color: var(--font-color); */
-    width: 100%;
+.inputbox input {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  font-size: 15px;
+  /* color: var(--font-color); */
+  width: 100%;
 }
 
-.inputbox input::placeholder{
-    color: #ffffff9e;
+.inputbox input::placeholder {
+  color: #ffffff9e;
 }
 
-.inputbox i{
-    color:var(--font-color);
-    font-size: 25px;
-    cursor: pointer;
+.inputbox i {
+  color: var(--font-color);
+  font-size: 23px;
+  cursor: pointer;
 }
 
-.inputbox i:hover{
-    transform: scale(1.1);
+.inputbox i:hover {
+  transform: scale(1.1);
 }
 
-.inputbox i:active{
-    transform: scale(1);
+.inputbox i:active {
+  transform: scale(1);
 }
 
 /*            footer                */
 
-.footer{
-    display: flex;
-    gap: 15px;
-    align-items: center;
-    margin: 1rem 0;
-    /* color: var(--font-color); */
-    height: 40px;
-    position: relative;
+.footer {
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  justify-content: space-between;
+  margin: .5rem 0;
+  /* color: var(--font-color); */
+  height: 35px;
+  position: relative;
 }
 
-.toggle{
-    height: 27px;
-    width: 50px;
-    border-radius: 50px;
-    position: relative;
-    /* background-color: var(--background); */
-    border: var(--border);
+.toggle {
+  height: 27px;
+  width: 50px;
+  border-radius: 50px;
+  position: relative;
+  /* background-color: var(--background); */
+  border: var(--border);
 }
-.toggle::before{
-    content: "";
-    height: 20px;
-    width: 20px;
-    background-color: var(--font-color);
-    border-radius: 50px;
-    position: absolute;
-    top: 50%;
-    left: 13px;
-    transform: translate(-50%,-50%);
-    transition: 0.3s;
+.toggle::before {
+  content: "";
+  height: 20px;
+  width: 20px;
+  background-color: var(--font-color);
+  border-radius: 50px;
+  position: absolute;
+  top: 50%;
+  left: 13px;
+  transform: translate(-50%, -50%);
+  transition: 0.3s;
 }
-#check{
-    display: none;
+#check {
+  display: none;
 }
-#check:checked ~ .toggle::before{
-    left: 35px;
-    background-color: var(--font-color);
-}
-
-
-.footer p{
-    font-size: 13px;
+#check:checked ~ .toggle::before {
+  left: 35px;
+  background-color: var(--font-color);
 }
 
-.btn{
-    height: 100%;
+.footer p {
+  font-size: 13px;
 }
 
-.btn button{
-    /* color: var(--font-color); */
-    padding:5px;
-    height: 100%;
-    border-radius: 5px;
-    /* background-color: var(--background);
+.btn {
+  height: 100%;
+}
+
+.btn button {
+  /* color: var(--font-color); */
+  padding: 5px;
+  height: 100%;
+  border-radius: 5px;
+  /* background-color: var(--background);
     border:  var(--border); */
 }
 
-.themes{
-    background-color: var(--background);
-    height: 100%;
-    padding: 5px;
-    border-radius: 5px;
-    border: var(--border);
-    display: flex;
-    align-items: center;    
+.themes {
+  background-color: var(--background);
+  height: 100%;
+  padding: 5px;
+  border-radius: 5px;
+  border: var(--border);
+  display: flex;
+  align-items: center;
 }
 
-.themes input{
-    margin: 3px;
+.themes input {
+  margin: 3px;
 }
 
-.menu{
-    /* background-color: var(--background); */
-    position: relative;
-    height: 100vh;
-    padding: 1rem; 
-    /* border-right: var(--border); */
-    z-index: 100px;
-    transition: 0.3s ease;
-    backdrop-filter: blur(50px);
+.menu {
+  /* background-color: var(--background); */
+  position: relative;
+  height: 100vh;
+  padding: 1rem;
+  /* border-right: var(--border); */
+  z-index: 100px;
+  transition: 0.3s ease;
+  backdrop-filter: blur(50px);
+  user-select: none;
 }
 
-
-.hamburger{
-    /* color: var(--font-color); */
-    position: absolute;
-    right: 1rem;
-    display: flex;
-    top: 0rem;
+.hamburger {
+  /* color: var(--font-color); */
+  position: absolute;
+  right: 0.3rem;
+  display: flex;
+  top: 0rem;
 }
 
-.hamburger label{
-    position: relative;
-    font-size: 50px;
-    font-weight: 200;
-    transition: 0.3s;
-    cursor: pointer;
+.hamburger label {
+  position: relative;
+  font-size: 50px;
+  font-weight: 200;
+  transition: 0.3s;
+  cursor: pointer;
 }
 
-#close{
-    display: none;
+#close {
+  display: none;
 }
 
-.hamburger label::before{
-    content: "-";
-    position: absolute;
-    top: 5px;
-    transition: 0.3s;
+.hamburger label::before {
+  content: "-";
+  position: absolute;
+  top: 6px;
+  transition: 0.3s;
 }
 
-.hamburger label::after{
-    content: "-";
-    position: absolute;
-    left: 0;
-    bottom: 5px;
-    transition: 0.3s;
+.hamburger label::after {
+  content: "-";
+  position: absolute;
+  left: 0;
+  bottom: 6px;
+  transition: 0.3s;
 }
 
-#close:checked~.hamburger label::before{
-    transform: rotate(90deg);
-    top: 2px;
-    left: -5px;
+#close:checked ~ .hamburger label::before {
+  transform: rotate(90deg);
+  top: 1px;
+  left: -4px;
 }
 
-#close:checked~ .hamburger label{
-    transform: rotate(45deg);
-    bottom: 5;
-    left: 2px;
+#close:checked ~ .hamburger label {
+  transform: rotate(45deg);
+  bottom: 5;
+  left: 2px;
 }
 
-#close:checked ~.hamburger label::after{
-    opacity: 0;
+#close:checked ~ .hamburger label::after {
+  opacity: 0;
 }
 
-.options{
-    width: 250px;
-    position: relative;
-    transition: 0.3s ease   ;
+.options {
+  width: 250px;
+  position: relative;
+  transition: 0.3s ease;
 }
 
-.new-convo{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    /* background-color: var(--main-background); */
-    border-radius: 10px;
-    border: var(--border);
-    padding: 10px 30px 10px 10px;
-    cursor: pointer;
-    /* color: var(--font-color); */
+.new-convo {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  /* background-color: var(--main-background); */
+  border-radius: 10px;
+  border: var(--border);
+  padding: 10px 30px 10px 10px;
+  cursor: pointer;
+  /* color: var(--font-color); */
 }
 
-
-.prev-convo-items{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-    margin: 1rem 0px;
-    /* color: var(--font-color); */
-    border-radius: 10px;
-    transition: 0.2s;
-    cursor: pointer;
+.new-convo, .prev-convo, .clear-convo{
+    
+  font-size: 13px;
+  width: 200px;
 }
 
-.prev-convo-items:hover{
-    background-color: #ffffff2c;
-}
-
-.prev-convo div{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.clear-convo{
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    padding: 10px;
-    background-color: var(--main-background);
-    color: var(--font-color);
-    border: var(--border);
-    cursor: pointer;
-    border-radius: 10px;
+.prev-convo{
     margin-top: 1rem;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  max-height: 80vh;
+  width: 100%;
+}
+
+.prev-convo-items {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  margin: 1rem 0;
+  /* color: var(--font-color); */
+  border-radius: 10px;
+  transition: 0.2s;
+  cursor: pointer;
+}
+
+.prev-convo-items:hover {
+  background-color: #ffffff2c;
+}
+
+.prev-convo div {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.clear-convo {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  padding: 10px;
+  background-color: var(--main-background);
+  color: var(--font-color);
+  border: var(--border);
+  cursor: pointer;
+  border-radius: 10px;
+  margin-top: 1rem;
+}
+
+@media screen and (max-width: 769px) {
+  .menu {
+    position: absolute;
+    z-index: 100;
+  }
+
+  .right {
+    margin-left: 60px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+
+    .footer{
+        height: 30px;
+    }
+
+  .toggle {
+    height: 20px;
+    width: 35px;
+    border-radius: 50px;
+    position: relative;
+    /* background-color: var(--background); */
+    border: var(--border);
+  }
+  .toggle::before {
+    content: "";
+    height: 16px;
+    width: 16px;
+    background-color: var(--font-color);
+    border-radius: 50px;
+    position: absolute;
+    top: 51%;
+    left: 10px;
+    transform: translate(-50%, -50%);
+    transition: 0.3s;
+  }
+  #check {
+    display: none;
+  }
+  #check:checked ~ .toggle::before {
+    left: 23px;
+    background-color: var(--font-color);
+  }
+
+  .footer p {
+    font-size: 10px;
+  }
+
+  .right {
+    margin-left: 2.5rem;
+  }
+
+  .inputbox {
+    height: 40px;
+  }
+
+  .msgArea .user p, .bot p{
+    font-size: 13px;
+  }
+  .user .img,.bot .img{
+    height: 30px;
+    width: 30px;
+    max-width: 30px;
+    min-width: 30px;
+    font-size: 12px;
+  }
+
+  .submit i{
+    font-size: 20px;
+  }
+
+  .inputbox{
+    padding: .5rem;
+  }
+
+  .inputbox input{
+    font-size: 13px;
+  }
+
+  .menu .new-convo, .prev-convo, .clear-convo{
+    font-size: 13px;
+    width: 200px;
+  }
 }
 
 
-@media screen and (max-width:769px) {
+@media screen and (min-width:670px) {
 
-    .menu{
-        position: absolute;
-        z-index: 100;
+    .right{
+        margin: auto;
+        padding-left: 3rem;
     }
     
-    .right{
-        margin-left: 60px;
-    }
 }
