--- a/chatGPT/src/index.css
+++ b/chatGPT/src/index.css
@@ -52,15 +52,22 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
-  padding: 3px;
+  width: 7px;
+  padding: 2px;
+  opacity: 0;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #ffffff56;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #ffffff;
+  background-color: #ffffff4a;
   border-radius: 50px;
+  margin: 2px;
+  transition: 0.3s;
+}
+
+::-webkit-scrollbar-thumb:hover, ::-webkit-scrollbar-thumb:active{
+  background-color: #ffffffc6;
 }
