--- a/chatGPT/src/App/app.css
+++ b/chatGPT/src/App/app.css
@@ -6,11 +6,18 @@
 
 .bg {
   height: 100%;
-  width: 100%;
-  position: relative;
+  width: 150%;
   overflow: hidden;
   position: absolute;
   z-index: -10;
+}
+
+.bg img{
+    /* width: 100%; */
+    height: 100%;
+    filter: blur(100px);
+    scale: 2;
+
 }
 
 video {
@@ -198,7 +205,7 @@ video {
   /* border-right: var(--border); */
   z-index: 100px;
   transition: 0.3s ease;
-  backdrop-filter: blur(50px);
+  backdrop-filter: blur(10px);
   user-select: none;
 }
 
