--- a/chatGPT/src/App/app.css
+++ b/chatGPT/src/App/app.css
@@ -38,6 +38,7 @@ video {
   flex-direction: column;
   justify-content: space-between;
   max-width: 735px;
+  margin-left: 2.5rem;
 }
 
 .msgArea {
@@ -333,9 +334,9 @@ video {
     z-index: 100;
   }
 
-  .right {
+  /* .right {
     margin-left: 60px;
-  }
+  } */
 }
 
 @media screen and (max-width: 425px) {
@@ -376,9 +377,6 @@ video {
     font-size: 10px;
   }
 
-  .right {
-    margin-left: 2.5rem;
-  }
 
   .inputbox {
     height: 40px;
@@ -418,7 +416,7 @@ video {
 
     .right{
         margin: auto;
-        padding-left: 3rem;
+        padding-left: 3.5rem;
     }
     
 }
