--- a/chatGPT/src/App/app.css
+++ b/chatGPT/src/App/app.css
@@ -282,7 +282,7 @@ video {
 .new-convo, .prev-convo, .clear-convo{
     
   font-size: 13px;
-  width: 200px;
+  width: 95%;
 }
 
 .prev-convo{
@@ -297,12 +297,16 @@ video {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px;
+  /* padding: 10px; */
   margin: 1rem 0;
   /* color: var(--font-color); */
   border-radius: 10px;
   transition: 0.2s;
   cursor: pointer;
+}
+
+.prev-convo-items i{
+  padding: 10px;
 }
 
 .prev-convo-items:hover {
