--- a/chatGPT/src/App/app.css
+++ b/chatGPT/src/App/app.css
@@ -220,7 +220,7 @@ video {
 .menu {
   /* background-color: var(--background); */
   /* position: relative; */
-  height: 100vh;
+  height: 100%;
   /* padding: 1rem; */
   position: absolute;
   left: -1px;
